# netrapier

./: .gitignore  README.md  main.py  pyproject.toml  test.py
netrapier/: __init__.py  constants.py  design.py
netrapier/modules/: networkinfo.py  pkganalyzing.py  portscan.py
stylesheets/: dark.css  moderndark.css
ui/: mainwindow.ui
